#ifndef PUNTO_HPP
#define PUNTO_HPP

#include <SFML/Graphics.hpp>

class Punto {
    public:
    
        Punto::Punto(float x, float y, float radio) {
        circulo.setRadius(radio);
        circulo.setFillColor(sf::Color::White);
        circulo.setPosition(x - radio, y - radio); // Centrar el círculo
    }

    void Punto::dibujar(sf::RenderWindow& ventana) {
        ventana.draw(circulo);
    }

    private:
        sf::CircleShape circulo;
    };

#endif // PUNTO_HPP
