@startuml diagrama

class Juego
class GameWindow{
    +Abrir()
    +Cerrar()
    +AjustarTamaño()
}
class Usuario
class PacLady{
    +Moverse()
}
class Vidas{
    -Numero Vidas
    + MostrarImagen(Corazon)
}
class Punto{
    +AumentarPuntaje()
}
class PuntoNormal{
    +Desaparecer()
    +Reaparecer()
}
class PuntoEspecial{
    +ConvetirFantasma()
    +Desaparecer()
    +Aparecer()
}
class Mapa{
    +MostrarImagen(Mapa)
}
class Fantasma{
    +Moverse()
}
class FantasmaNormal{
    +DisminuirVida()
}
class FantasmaComestible{
    +AumentarPuntaje()
    +CambiarApariencia()
    +Desaparecer()
    +Reaparecer()
}
class Puntaje{
    +Aumentar()
}

Juego *-- Usuario
Juego *-- GameWindow
Juego *-- Puntaje
Juego *-- PacLady
Juego *-- Punto
Juego *-- Mapa
Punto <|-- PuntoNormal 
Punto <|-- PuntoEspecial
Juego *-- Fantasma
Fantasma <|-- FantasmaComestible
Fantasma <|-- FantasmaNormal
Usuario o-- PacLady
PacLady o-- Punto
PacLady o-- Vidas
Puntaje o-- Punto

@enduml